# LCATS

./: .gitignore  .pre-commit-config.yaml  README.md  openai-cite-check.bib
lcats/: .coveragerc  AGENTS.md  MANIFEST.in  README.md  STYLE.md  cNOTd.out  cNOTd2.out  cache  copy.sh  dNOTc.out  environment.yml  epub.py  gather101925-01.out  gather101925-04.out  gather101925-05.out  gather102625-01.out  gather103025-01.out  gather103025-02.out  kill.sh  pyproject.toml  setup.py  styleguide.md  temp  titleParts.out  works.py
lcats/DataEarlyOct/: cNOTd  cNOTd.out  cNOTd.work  dNOTc  gather101925-02.out  gather101925-03.out  gather101925-06.out
lcats/KMo/: .#play.py  adminTest.sh  analyze.py  caseV0.py  caseV2.py  experiments.py  genre.py  isfdb2.py  missing.txt  scenes.py  stories.csv  temp  tempEx.py  testGraph.py  vector.py
lcats/docs/: README.md  index.md  secrets-setup.md
lcats/lcats/: chunking.py  cli.py  constants.py  extraction.py  inspect.py  meta_registry.py  pipeline.py  stories.py  test_utils.py  utils.py
lcats/mq-1747/: 1_000_a_plate.json  a_bad_day_for_sales.json  a_book_of_autographs.json  a_book_of_nonsense.json  a_bottle_of_old_wine.json  a_case_of_sunburn.json  a_chariot_of_fire.json  a_chautauqua_idyl.json  a_christmas_mystery_the_story_of_three_wise_men.json  a_city_near_centaurus.json  a_cold_night_for_crying.json  a_collection_of_scotch_proverbs.json  a_day_with_john_milton.json  a_day_with_robert_louis_stevenson.json  a_day_with_william_shakespeare.json  a_difficult_problem_1900.json  a_fair_penitent.json  a_fall_of_glass.json  a_filbert_is_a_nut.json  a_gift_for_terra.json  a_gift_from_earth.json  a_great_day_for_the_irish.json  a_hitch_in_space.json  a_jar_of_jelly_beans.json  a_jest_and_a_vengeance.json  a_likely_story.json  a_little_journey.json  a_little_knowledge.json  a_little_philosophy_of_life.json  a_long_way_back.json  a_madman_on_board.json  a_man_sized_pet.json  a_martian_odyssey.json  a_matter_of_order.json  a_matter_of_protocol.json  a_message_from_our_sponsor.json  a_moral_alphabet.json  a_notched_gun.json  a_pail_of_air.json  a_philanthropist.json  (+1304 more)
lcats/mq-2188/: 1970_a_vision_of_the_coming_age.json  2_b_r_0_2_b.json  a_bad_day_for_sales.json  a_bad_day_for_vermin.json  a_book_of_nonsense.json  a_case_of_sunburn.json  a_chariot_of_fire.json  a_charmed_life.json  a_chilhowee_lily_1911.json  a_christmas_mystery_the_story_of_three_wise_men.json  a_cold_night_for_crying.json  a_daughter_of_japan.json  a_day_at_happy_hollow_school.json  (+1754 more)
(+6710 files in other folders)
