[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcats"
version = "0.1"
description = "Literary Captain's Advisory Tool System."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Anthony Francis", email = "centaur@logicalrobotics.com"},
    {name = "Kenneth Moorman", email = "kmoorman@transy.edu"},
]
license = {text = "MIT"}
dependencies = [
   "unidecode",
   "chardet",
   "beautifulsoup4",
   "PyYAML",
   "tiktoken",
   "pandas",
   "tqdm",
   "matplotlib",
   "gutenbergpy @ git+https://github.com/xenotaur/gutenbergpy.git@LCATS/TitleFix",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
lcats = "lcats.cli:main"

[project.optional-dependencies]
test = [
    "ruff",
    "black",
    "coverage",
    "parameterized",
]
dev = [
    "ruff",
    "black",
    "coverage",
    "parameterized",
]
