[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcats"
version = "0.1"
description = "Literary Captain's Advisory Tool System."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Anthony Francis", email = "centaur@logicalrobotics.com"},
    {name = "Kenneth Moorman", email = "kmoorman@transy.edu"},
]
license = {text = "MIT"}
dependencies = [
   "unidecode",
   "beautifulsoup4",
   "PyYAML",
   "tiktoken",
   "pandas",
   "tqdm",
   "matplotlib",
   "seaborn",
   "gutenbergpy @ git+https://github.com/xenotaur/gutenbergpy.git@LCATS/TitleFix",
   "anthropic",
   "openai>=1.0.0",
   "python-dotenv",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
lcats = "lcats.cli:main"

[tool.setuptools.package-data]
# Ship the versioned gather-time override tables and survey allowlist config so
# they are present in wheel/sdist installs, not only in source checkouts.
"lcats.gatherers" = ["overrides/*.json"]
"lcats.analysis.corpus" = ["allowlists/*.json"]

[project.optional-dependencies]
test = [
    "ruff",
    "black==25.11.0",
    "coverage",
    "parameterized",
]
dev = [
    "ruff",
    "black==25.11.0",
    "coverage",
    "parameterized",
]
